--- a/account_provision_report/i18n/es_MX.po
+++ b/account_provision_report/i18n/es_MX.po
@@ -1,13 +1,13 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# 	* account_pending_report
+# 	* account_provision_report
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0\n"
+"Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-06-03 03:56+0000\n"
-"PO-Revision-Date: 2022-06-03 03:56+0000\n"
+"POT-Creation-Date: 2022-12-28 20:23+0000\n"
+"PO-Revision-Date: 2022-12-28 20:23+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -15,293 +15,270 @@ msgstr ""
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
 #, python-format
 msgid "1-30 Days"
 msgstr "Días 1-30"
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
 #, python-format
 msgid "1st Semester"
 msgstr "1er Semestre Año Anterior"
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
 #, python-format
 msgid "2nd Semester"
 msgstr "2do Semestre Año Anterior"
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "31-60 Days"
-msgstr "Días 31-60"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "61-90 Days"
-msgstr "Días 61-90"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "ACCOUNT PAYABLE INTERCOMPANY"
-msgstr "CUENTAS POR PAGAR EMPRESAS RELACIONADAS"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "ACCOUNT PAYABLE LT INTERCOMPANY"
-msgstr "CUENTAS POR PAGAR EMPRESAS RELACIONADAS LP"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "ACCOUNT RECEIVABLE INTERCOMPANY"
-msgstr "CUENTAS POR COBRAR EMPRESAS RELACIONADAS"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "ACCOUNT RECEIVABLE LT INTERCOMPANY"
-msgstr "CUENTAS POR COBRAR EMPRESAS RELACIONADAS LP"
-
-#. module: account_pending_report
-#: model:ir.actions.report,name:account_pending_report.ikatech_report_xlsx
-msgid "Accounts Aging"
-msgstr "Cuentas Antiguas"
-
-#. module: account_pending_report
-#: model:ir.actions.act_window,name:account_pending_report.action_xlsx_report
-msgid "Ageing Account Balances"
-msgstr "Saldos de Cuentas Antiguas"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "Aging Account Payable Report"
-msgstr "Cuentas Por Pagar Pendientes"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "Aging Account Receivable Report"
-msgstr "Cuentas Por Cobrar Pendientes"
-
-#. module: account_pending_report
-#: model:ir.ui.menu,name:account_pending_report.menu_account_pending_report
-msgid "Aging Accounts"
-msgstr "Cuentas Antiguas"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "American currency"
-msgstr "Moneda Americana"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "April"
-msgstr "Abril"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "August"
-msgstr "Agosto"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "CLIENTS"
-msgstr "CLIENTES"
-
-#. module: account_pending_report
-#: model_terms:ir.ui.view,arch_db:account_pending_report.view_account_pending_report
-msgid "Cancel"
-msgstr "Cancelar"
-
-#. module: account_pending_report
-#: model_terms:ir.ui.view,arch_db:account_pending_report.view_account_pending_report
-msgid "Choose your details"
-msgstr "Elige tus detalles"
-
-#. module: account_pending_report
-#: model:ir.model.fields,field_description:account_pending_report.field_account_pending_report__create_uid
-msgid "Created by"
-msgstr "Creado por"
-
-#. module: account_pending_report
-#: model:ir.model.fields,field_description:account_pending_report.field_account_pending_report__create_date
-msgid "Created on"
-msgstr "Creado el"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "Current Due"
-msgstr "Corriente "
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "December"
-msgstr "Diciembre"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "Detailed"
-msgstr "Detallado"
-
-
-#. module: account_pending_report
-#: model:ir.model.fields,field_description:account_pending_report.field_account_pending_report__display_name
-msgid "Display Name"
-msgstr "Nombre a mostrar"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "February"
-msgstr "Febrero"
-
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "Final Date"
-msgstr "Fecha final"
-
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "Initial Date"
-msgstr "Fecha Inicial"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "January"
-msgstr "Enero"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "July"
-msgstr "Julio"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "June"
-msgstr "Junio"
-
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
 #, python-format
 msgid "2nd Year"
 msgstr "2do Año"
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
 #, python-format
-msgid "MISCELLANEOUS CREDITORS"
-msgstr "ACREEDORES VARIOS"
+msgid "31-60 Days"
+msgstr ""
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
 #, python-format
-msgid "MISCELLANEOUS DEBTORS"
-msgstr "DEUDORES VARIOS"
+msgid "61-90 Days"
+msgstr "Días 31-60"
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: model:ir.actions.report,name:account_provision_report.ikatech_report_xlsx
+msgid "Accounts Aging"
+msgstr ""
+
+#. module: account_provision_report
+#: model_terms:ir.ui.view,arch_db:account_provision_report.view_account_provision_report
+msgid "Accounts receivable"
+msgstr "Provisión de cuentas"
+
+#. module: account_provision_report
+#: model:ir.actions.act_window,name:account_provision_report.action_xlsx_report
+msgid "Ageing Provision Account Balances"
+msgstr ""
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#: model:ir.model.fields,field_description:account_provision_report.field_account_provision_report__foreign
+#, python-format
+msgid "American currency"
+msgstr "Moneda Americana"
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#, python-format
+msgid "April"
+msgstr "Abril"
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#, python-format
+msgid "August"
+msgstr "Agosto"
+
+#. module: account_provision_report
+#: model_terms:ir.ui.view,arch_db:account_provision_report.view_account_provision_report
+msgid "Cancel"
+msgstr "Cancelar"
+
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#, python-format
+msgid "Current Due"
+msgstr "Corriente "
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#, python-format
+msgid "December"
+msgstr "Diciembre"
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#: model:ir.model.fields,field_description:account_provision_report.field_account_provision_report__detail
+#, python-format
+msgid "Detailed"
+msgstr "Detallado"
+
+#. module: account_provision_report
+#: model:ir.model.fields,field_description:account_provision_report.field_account_provision_report__display_name
+msgid "Display Name"
+msgstr "Nombre a mostrar"
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#, python-format
+msgid "FOREIGN INCOME PROVISION EUR"
+msgstr "PROVISIÓN INGRESOS EXTRANJERO EUR"
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#, python-format
+msgid "FOREIGN INCOME PROVISION USD"
+msgstr "PROVISIÓN INGRESOS EXTRANJERO USD"
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#, python-format
+msgid "February"
+msgstr "Febrero"
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#: model:ir.model.fields,field_description:account_provision_report.field_account_provision_report__dt_final
+#, python-format
+msgid "Final Date"
+msgstr "Fecha final"
+
+#. module: account_provision_report
+#: model:ir.model.fields,field_description:account_provision_report.field_account_provision_report__id
+msgid "ID"
+msgstr ""
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#, python-format
+msgid "Income Provisions Report"
+msgstr "Provisión de Cuentas"
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#: model:ir.model.fields,field_description:account_provision_report.field_account_provision_report__dt_initial
+#, python-format
+msgid "Initial Date"
+msgstr ""
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#, python-format
+msgid "January"
+msgstr "Enero"
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#, python-format
+msgid "July"
+msgstr "Julio"
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#, python-format
+msgid "June"
+msgstr "Junio"
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#, python-format
+msgid "LINKED / RELATED INCOME PROVISION"
+msgstr "PROVISIÓN INGRESOS VINCULADAS / RELACIONADAS"
+
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
 #, python-format
 msgid "March"
 msgstr "Marzo"
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
 #, python-format
 msgid "May"
 msgstr "Mayo"
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#, python-format
+msgid "NATIONAL INCOME PROVISION"
+msgstr "PROVISIÓN INGRESOS NACIONALES"
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
 #, python-format
 msgid "November"
 msgstr "Noviembre"
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
 #, python-format
 msgid "October"
 msgstr "Octubre"
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
 #, python-format
 msgid "Older than"
 msgstr "Más Antigüedad"
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
 #, python-format
 msgid "Over 90 days"
 msgstr "Más de 90 días"
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
-#, python-format
-msgid "PROVIDERS"
-msgstr "PROVEEDORES"
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#: model:ir.model.fields.selection,name:account_provision_report.selection__account_provision_report__nature__payable
 #, python-format
 msgid "Payable"
 msgstr "Por Pagar"
 
-#. module: account_pending_report
-#: model_terms:ir.ui.view,arch_db:account_pending_report.view_account_pending_report
+#. module: account_provision_report
+#: model_terms:ir.ui.view,arch_db:account_provision_report.view_account_provision_report
 msgid "Print"
 msgstr "Imprimir"
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: model:ir.ui.menu,name:account_provision_report.menu_account_provision_report
+msgid "Provision Accounts"
+msgstr "Provisión de Cuentas"
+
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#: model:ir.model.fields.selection,name:account_provision_report.selection__account_provision_report__nature__receivable
 #, python-format
 msgid "Receivable"
 msgstr "Por Cobrar"
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
 #, python-format
 msgid "September"
 msgstr "Septiembre"
 
-
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
 #, python-format
 msgid "Total"
 msgstr ""
 
-#. module: account_pending_report
-#: code:addons/account_pending_report/wizards/accounts_pending.py:0
+#. module: account_provision_report
+#: code:addons/account_provision_report/wizards/accounts_provision.py:0
+#: model:ir.model.fields,field_description:account_provision_report.field_account_provision_report__nature
 #, python-format
 msgid "Type of report"
 msgstr "Tipo de reporte"
 
+#. module: account_provision_report
+#: model:ir.model,name:account_provision_report.model_account_provision_report
+msgid "account.provision.report"
+msgstr ""
 
-#. module: account_pending_report
-#: model_terms:ir.ui.view,arch_db:account_pending_report.view_account_pending_report
+#. module: account_provision_report
+#: model_terms:ir.ui.view,arch_db:account_provision_report.view_account_provision_report
 msgid "or"
-msgstr "O"
+msgstr "ó"
 
+#. module: account_provision_report
+#: model:ir.model,name:account_provision_report.model_report_account_provision_report_accpend_report_xlsx
+msgid "report.account_provision_report.accpend_report_xlsx"
+msgstr ""
