--- a/account_partner_required/i18n/es_MX.po
+++ b/account_partner_required/i18n/es_MX.po
@@ -1,74 +1,51 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# * account_partner_required
+# 	* account_partner_required
 #
-# Translators:
 msgid ""
 msgstr ""
-"Project-Id-Version: account-financial-tools (8.0)\n"
+"Project-Id-Version: Odoo Server 15.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-07-01 13:25+0000\n"
-"PO-Revision-Date: 2015-06-03 15:56+0000\n"
-"Last-Translator: <>\n"
-"Language-Team: Spanish (Mexico) (http://www.transifex.com/oca/OCA-account-"
-"financial-tools-8-0/language/es_MX/)\n"
+"POT-Creation-Date: 2024-03-04 21:03+0000\n"
+"PO-Revision-Date: 2024-03-04 15:07-0600\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: es_MX\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.4.1\n"
 
 #. module: account_partner_required
 #: model:ir.model,name:account_partner_required.model_account_account
 msgid "Account"
-msgstr ""
+msgstr "Cuenta"
 
 #. module: account_partner_required
 #: model:ir.model,name:account_partner_required.model_account_account_type
 msgid "Account Type"
-msgstr ""
+msgstr "Tipo de cuenta"
 
 #. module: account_partner_required
-#: model:ir.model.fields.selection,name:account_partner_required.selection__account_account_type__partner_policy__always
+#: model:ir.model.fields.selection,name:account_partner_required.selection__account_account_type__property_partner_policy__always
 msgid "Always"
-msgstr ""
-
-#. module: account_partner_required
-#: model:ir.model.fields,field_description:account_partner_required.field_account_account__display_name
-#: model:ir.model.fields,field_description:account_partner_required.field_account_account_type__display_name
-#: model:ir.model.fields,field_description:account_partner_required.field_account_move_line__display_name
-msgid "Display Name"
-msgstr ""
-
-#. module: account_partner_required
-#: model:ir.model.fields,field_description:account_partner_required.field_account_account__id
-#: model:ir.model.fields,field_description:account_partner_required.field_account_account_type__id
-#: model:ir.model.fields,field_description:account_partner_required.field_account_move_line__id
-msgid "ID"
-msgstr ""
+msgstr "Siempre"
 
 #. module: account_partner_required
 #: model:ir.model,name:account_partner_required.model_account_move_line
-#, fuzzy
-msgid "Journal Item"
-msgstr "Elementos diario"
-
-#. module: account_partner_required
-#: model:ir.model.fields,field_description:account_partner_required.field_account_account____last_update
-#: model:ir.model.fields,field_description:account_partner_required.field_account_account_type____last_update
-#: model:ir.model.fields,field_description:account_partner_required.field_account_move_line____last_update
-msgid "Last Modified on"
+msgid "Journal Items"
 msgstr ""
 
 #. module: account_partner_required
-#: model:ir.model.fields.selection,name:account_partner_required.selection__account_account_type__partner_policy__never
+#: model:ir.model.fields.selection,name:account_partner_required.selection__account_account_type__property_partner_policy__never
 msgid "Never"
-msgstr ""
+msgstr "Nunca"
 
 #. module: account_partner_required
-#: model:ir.model.fields.selection,name:account_partner_required.selection__account_account_type__partner_policy__optional
+#: model:ir.model.fields.selection,name:account_partner_required.selection__account_account_type__property_partner_policy__optional
 msgid "Optional"
-msgstr ""
+msgstr "Opcional"
 
 #. module: account_partner_required
 #: code:addons/account_partner_required/models/account.py:0
@@ -77,22 +54,28 @@ msgid ""
 "Partner policy is set to 'Always' with account '%s' but the partner is "
 "missing in the account move line with label '%s'."
 msgstr ""
+"La política de partner está establecida en \"Siempre\" con la cuenta "
+"\"%s\", pero falta el partner en la línea de movimiento de la cuenta con la "
+"etiqueta \"%s\"."
 
 #. module: account_partner_required
 #: code:addons/account_partner_required/models/account.py:0
 #, python-format
 msgid ""
-"Partner policy is set to 'Never' with account '%s' but the account move line "
-"with label '%s' has a partner '%s'."
+"Partner policy is set to 'Never' with account '%s' but the account move "
+"line with label '%s' has a partner '%s'."
 msgstr ""
+"La política de partner está establecida en \"Nunca\" con la cuenta \"%s\", "
+"pero la línea de movimiento de la cuenta con la etiqueta \"%s\" tiene un "
+"partner \"%s\"."
 
 #. module: account_partner_required
-#: model:ir.model.fields,field_description:account_partner_required.field_account_account_type__partner_policy
+#: model:ir.model.fields,field_description:account_partner_required.field_account_account_type__property_partner_policy
 msgid "Policy for Partner Field"
-msgstr ""
+msgstr "Política para el Partner"
 
 #. module: account_partner_required
-#: model:ir.model.fields,help:account_partner_required.field_account_account_type__partner_policy
+#: model:ir.model.fields,help:account_partner_required.field_account_account_type__property_partner_policy
 msgid ""
 "Set the policy for the partner field : if you select 'Optional', the "
 "accountant is free to put a partner on an account move line with this type "
